[IMP] Bug #19920 - field correction, removed custom need by field, rename field label, pull PO's SO need by date field's value from sale order
(cherry picked from commit d518f0116563293b3ccf4978c397a4a5055865f0)

--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -81,7 +81,7 @@
                            t-as="purchase">
                             <div class="text-danger">
                                 <strong>Order Arrive By Date:</strong>
-                                <span t-field="purchase.date_order" />
+                                <span t-field="purchase.date_approve" />
                                 <br/>
                             </div>
                         </t>
