--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -19,6 +19,9 @@
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
+            <label for="date_approve" position="attributes">
+                <attribute name="string">PO/Confirmation Date</attribute>
+            </label>
             <xpath expr="//field[@name='partner_id']" position="attributes">
                 <attribute name="options">{"always_reload": True}</attribute>
                 <attribute name="context">{'res_partner_search_mode': 'supplier', 'show_address': 1, 'show_vat': True}</attribute>
@@ -146,7 +149,6 @@
                     <group name="date_delivary_requirements" string="Date And Delivary">
                         <group>
                             <field name="num_of_need_by_days"/>
-                            <field name="need_by_date"/>
                             <field name="future_ship_nuances"/>
                             <field name="shipping_nuances"/>
                             <field name="processing_time_nuances"/>
