[IMP]PO: added rush order and changed email template

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -260,6 +260,9 @@
                 <attribute name="context">{'show_address': 1}</attribute>
                 <attribute name="options">{"always_reload": True}</attribute>
             </xpath>
+            <xpath expr="//field[@name='effective_date']" position="after">
+                <field name="rush"/>
+            </xpath>
         </field>
     </record>
 
