--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -113,10 +113,11 @@
                     <group>
                         <group string="Tracking" name="sale_reporting">
                             <group name="utm_link" colspan="2" class="mt-0">
-                                <field name="origin"/>
-                                <field name="medium_id" readonly="0"/>
-                                <field name="source_id" readonly="0"/>
-                                <field name="campaign_id"/>
+                                <field name="origin" />
+                                <field name="opportunity_id" />
+                                <field name="medium_id" />
+                                <field name="source_id" />
+                                <field name="campaign_id" />
                             </group>
                         </group>
                     </group>
