--- a/bista_crm/views/crm_lead_views.xml
+++ b/bista_crm/views/crm_lead_views.xml
@@ -26,15 +26,20 @@
             </xpath>
             <xpath expr="//page[@name='lead']//field[@name='source_id']" position="attributes">
                 <attribute name="string">Deal Source</attribute>
+                <attribute name="options">{"no_open": True, "no_create": True}</attribute>
             </xpath>
             <xpath expr="//field[@name='date_deadline']" position="attributes">
                 <attribute name="string">Estimated Close Date</attribute>
             </xpath>
             <xpath expr="//page[@name='lead']//field[@name='campaign_id']" position="attributes">
                 <attribute name="string">Sales Campaign</attribute>
+                <attribute name="options">{"no_open": True, "no_create": True}</attribute>
             </xpath>
             <xpath expr="//page[@name='extra']//field[@name='campaign_id']" position="replace">
                 <attribute name="string">Sales Campaign</attribute>
+            </xpath>
+            <xpath expr="//page[@name='lead']//field[@name='medium_id']" position="attributes">
+                <attribute name="options">{"no_open": True, "no_create": True}</attribute>
             </xpath>
             <xpath expr="//page[@name='lead']//field[@name='referred']" position="before">
                 <field name="referring_organization" domain="[('company_type', '=', 'company')]"/>
