--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -124,9 +124,9 @@
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;">
                         <strong>SKU</strong>
                     </th> -->
-                    <th class="text-center"
+                    <th class="text-left"
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black; ">
-                        <strong>Title</strong>
+                        <strong>Description</strong>
                     </th>
                     <!-- <th class="text-center"
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;" >
@@ -203,7 +203,7 @@
                 <t t-if="o.move_type == 'out_invoice'">
                     <td class="text-center" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                        <span t-field="line.quote_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <t t-if="o.move_type == 'in_invoice'">
@@ -219,7 +219,7 @@
                     </td>
                     <td class="text-center text-danger" name="td_bp_price"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.purchase_line_id.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                        <span t-field="line.bp_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                     <td class="text-center"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; margin: auto;">
