--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -19,6 +19,9 @@
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
+            <label for="date_planned" position="before">
+                <field name="need_by_date" />
+            </label>
             <label for="date_approve" position="attributes">
                 <attribute name="string">PO/Confirmation Date</attribute>
             </label>
