[FIX]Fixed the isbn or default code issue on sales pdf.
(cherry picked from commit 74d5e8277e9fdc53133e846bffa402cf450ec3da)

--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -249,7 +249,7 @@
                     <b>
                         <span t-field="line.product_template_id.name"/>
                         <br/>
-                        <t t-if="line.product_template_id.isbn">
+                        <t t-if="line.product_template_id.default_code or line.product_template_id.default_code">
                         <span style="font-weight: bold;">ISBN:</span>
                         <span t-if="line.product_template_id.default_code" t-field="line.product_template_id.default_code"/>
                         <span t-if="not line.product_template_id.default_code" t-field="line.product_template_id.isbn"/><br/>
