--- a/bista_orders_report/views/purchase_order_line_view.xml
+++ b/bista_orders_report/views/purchase_order_line_view.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
     <!-- Purchase order line report tree view. -->
     <record id="purchase_order_line_tree_view" model="ir.ui.view">
         <field name="name">purchase.order.line.tree.view</field>
         <field name="model">purchase.order.line</field>
         <field name="arch" type="xml">
-            <tree string="Purchase Order Line">
+            <tree string="Purchase Order Line" editable="top">
                 <field name="partner_id" string="Vendor"/>
-                <field name="order_id" optional="show"/>
+                <field name="order_id" optional="show" readonly="1" />
                 <field name="date_order"/>
-                <field name="date_planned" string="Expected Receipt Date" optional="show"/>
+                <field name="date_planned" string="Expected Receipt Date" optional="show" readonly="1" />
                 <field name="industry_id"/>
-                <field name="product_id"/>
+                <field name="product_id" readonly="1" />
                 <field name="price_unit" string="Unit Price" optional="show" widget="monetary"/>
                 <field name="currency_id" optional="hide"/>
                 <field name="uom_id" string="Unit of Measure" optional="show"/>
@@ -26,7 +25,7 @@
                 <field name="short_close_price" optional="show" widget="monetary"/>
                 <field name="price_subtotal" string="Order Value" optional="show" widget="monetary"/>
                 <field name="line_status" optional="show"/>
-                <field name="taxes_id" widget="many2many_tags" optional="hide"/>
+                <field name="taxes_id" widget="many2many_tags" optional="hide" readonly="1" />
                 <field name="price_tax" optional="hide" widget="monetary"/>
                 <field name="price_total" optional="hide" widget="monetary"/>
             </tree>
@@ -70,6 +69,6 @@
         <field name="view_id" ref="bista_orders_report.purchase_order_line_tree_view"/>
         <field name="search_view_id" ref="bista_orders_report.purchase_order_line_search_view"/>
         <field name="target">current</field>
+        <field name="context">{'create': False, 'delete': False}</field>
     </record>
-
 </odoo>
