--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -262,7 +262,7 @@
         <field name="inherit_id" ref="purchase_stock.purchase_order_view_form_inherit"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='dest_address_id']" position="attributes">
-                <attribute name="context">{'show_address': 1}</attribute>
+                <attribute name="context">{'show_address': 1, 'dropship_contact': True}</attribute>
                 <attribute name="options">{"always_reload": True}</attribute>
             </xpath>
             <xpath expr="//field[@name='effective_date']" position="after">
