--- a/bista_purchase/views/stock_picking_views.xml
+++ b/bista_purchase/views/stock_picking_views.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
     <record id="stock_picking_nuences_view" model="ir.ui.view">
         <field name="name">stock.picking.nuences.view</field>
         <field name="model">stock.picking</field>
@@ -8,9 +7,9 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='location_dest_id']" position="after">
                 <field name="applicable_tracking_ids" invisible="1"/>
-                <field name="purchase_tracking_id" options="{'no_create':1}"
-                       attrs="{'invisible':[('picking_type_code','!=','incoming')], 'readonly':[('state','in',['done','cancel'])]}"
-                       domain="[('id', 'in', applicable_tracking_ids)]" context="{'shipping_selection':1}"/>
+                <field name="purchase_tracking_id" options="{'no_create': 1, 'no_edit': 1, 'no_open': 1}"
+                    attrs="{'invisible': [('picking_type_code', '!=', 'incoming')], 'readonly': [('state', 'in', ['done', 'cancel'])]}"
+                    domain="[('id', 'in', applicable_tracking_ids)]" context="{'shipping_selection': 1}"/>
             </xpath>
             <xpath expr="//page[@name='note']" position="after">
                 <page name="nuances" string="Nuances"  attrs="{'invisible':[('picking_type_code','!=','incoming')]}">
@@ -27,7 +26,6 @@
                             <field name="frieght_nuances"/>
                             <field name="pre_approval_nuances"/>
                             <field name="author_event_shipping_naunces"/>
-<!--                             <field name="attachment_ids" widget="many2many_binary"/>-->
                         </group>
                     </group>
                 </page>
