[IMP] Feature #19716 - only keep PO number link on purchase order status report
(cherry picked from commit eba656d6cd6741ad458f542cff87d4c44daf335b)

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="bista_orders_report.purchase_order_line_tree_view"/>
         <field name="arch" type="xml">
             <field name="price_total" position="after">
-                <field name="status_id" optional="show" readonly="1" />
+                <field name="status_id" optional="show" readonly="1" options="{'no_open': 1}" />
                 <field name="next_followup_date" optional="show" readonly="1" />
                 <field name="note" optional="show" readonly="1" />
             </field>
