[FIX] Bug #19703 - fixed the issue of wrong Client PO Number on Invoice PDF.

--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -105,11 +105,10 @@
                             <span t-field="o.partner_id.account_number" />
                             <br/>
                         </t>
-                        <t t-if="o.sale_order_id.client_order_ref">
+                        <div t-if="o.ref">
                             <strong>Client PO Number:</strong>
-                            <span t-field="o.sale_order_id.client_order_ref"/>
-                            <br/>
-                        </t>
+                            <span t-field="o.ref"/>
+                        </div>
                     </t>
                 </t>
             </div>
@@ -175,10 +174,6 @@
         </xpath>
         <xpath expr="//t[@t-if='not line.display_type']" position="replace">
             <t t-if="not line.display_type">
-                <!-- <td id="td_default_code" class="text-left td_style"
-                    style="border-bottom: 1px solid black;border-right: 1px solid black;border-left: 1px solid black;border-top: 1px solid black;">
-                    <span t-field="line.product_id.default_code"/>
-                </td> -->
                 <td id="product"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;border-left: 1px solid black;">
                     <span t-out="line.product_id.name"/>
@@ -192,10 +187,6 @@
                         <span t-field="line.product_format" /><br/>
                     </t>
                 </td>
-                <!-- <td class="text-center" name="td_format"
-                    style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                    <span t-field="line.product_id.product_format"/>
-                </td> -->
                 <td class="text-center"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; ">
                     <span t-field="line.quantity" t-options="{'widget': 'integer'}" />
