[IMP] CR #19920 - Date only visible after approve PO and changed label AM Owner to Ops Owner

--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -67,7 +67,7 @@
                             <t t-esc="o.name"/>
                         </strong>
                     </h4>
-                    <strong>Date:
+                    <strong t-if="o.date_approve">Date:
                         <span t-field="o.date_approve" t-options='{"widget": "date"}'/>
                     </strong>
                 </t>
